hard-gists/6325830/run.log
=== Docker Run Log for 6325830 ===
Started at: Mi 29. Okt 16:28:20 CET 2025

[2025-10-29 16:28:20] START: Running container for 6325830
[2025-10-29 16:28:20] SUCCESS: Container 88c05e285269493660575b7cd8477b058bfc3a685a923b8db972928199449707 started for 6325830
=== Container logs for 6325830 ===
  File "/snippet.py", line 36
    print '-----------------------------sklearn------------------------------'
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 6325830 ===
[2025-10-29 16:28:22] INFO: Container 88c05e285269493660575b7cd8477b058bfc3a685a923b8db972928199449707 has stopped
